cmake_minimum_required(VERSION 3.6)
project(20162_INE5412_SC_Theme1_StartPoint_master)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    oldies/ModuleAssign.cpp
    oldies/ModuleAssign.h
    oldies/ModuleDelay.cpp
    oldies/ModuleDelay.h
    oldies/ModuleDuplicate.cpp
    oldies/ModuleDuplicate.h
    oldies/ModuleInvoke_DiskScheduler.cpp
    oldies/ModuleInvoke_DiskScheduler.h
    oldies/ModuleInvoke_FileSystem.cpp
    oldies/ModuleInvoke_FileSystem.h
    oldies/ModuleInvoke_InterruptHandler.cpp
    oldies/ModuleInvoke_InterruptHandler.h
    oldies/ModuleInvoke_MemoryAlloc.cpp
    oldies/ModuleInvoke_MemoryAlloc.h
    oldies/ModuleInvoke_MemoryDealloc.cpp
    oldies/ModuleInvoke_MemoryDealloc.h
    oldies/ModuleInvoke_ProcessExec.cpp
    oldies/ModuleInvoke_ProcessExec.h
    oldies/ModuleInvoke_ThreadExec.cpp
    oldies/ModuleInvoke_ThreadExec.h
    oldies/ModuleSignal.cpp
    oldies/ModuleSignal.h
    oldies/ModuleWait.cpp
    oldies/ModuleWait.h
    Abstr_Alarm.cpp
    Abstr_Alarm.h
    Abstr_FileAllocationTable.cpp
    Abstr_FileAllocationTable.h
    Abstr_FileAllocator.cpp
    Abstr_FileAllocator.h
    Abstr_FileSystem.cpp
    Abstr_FileSystem.h
    Abstr_MemoryChunk.cpp
    Abstr_MemoryChunk.h
    Abstr_MemoryManager.cpp
    Abstr_MemoryManager.h
    Abstr_Process.cpp
    Abstr_Process.h
    Abstr_Scheduler.cpp
    Abstr_Scheduler.h
    Abstr_Thread.cpp
    Abstr_Thread.h
    Application.cpp
    Application.h
    HW_CPU.cpp
    HW_CPU.h
    HW_DMA.cpp
    HW_DMA.h
    HW_HardDisk.cpp
    HW_HardDisk.h
    HW_Machine.cpp
    HW_Machine.h
    HW_MMU.cpp
    HW_MMU.h
    HW_MMU_Continuous.cpp
    HW_MMU_Continuous.h
    HW_MMU_Paging.cpp
    HW_MMU_Paging.h
    HW_MMU_Segmentation.cpp
    HW_MMU_Segmentation.h
    HW_RAM.cpp
    HW_RAM.h
    HW_Timer.cpp
    HW_Timer.h
    main.cpp
    Mediator_CPU.cpp
    Mediator_CPU.h
    Mediator_DMA.cpp
    Mediator_DMA.h
    Mediator_HardDisk.cpp
    Mediator_HardDisk.h
    Mediator_MMU.cpp
    Mediator_MMU.h
    Mediator_Timer.cpp
    Mediator_Timer.h
    Model.cpp
    Model.h
    ModelBuilder.cpp
    ModelBuilder.h
    Module.cpp
    Module.h
    ModuleCreate.cpp
    ModuleCreate.h
    ModuleDispose.cpp
    ModuleDispose.h
    ModuleInvoke_HardwareEvent.cpp
    ModuleInvoke_HardwareEvent.h
    ModuleInvoke_PulseExecution.cpp
    ModuleInvoke_PulseExecution.h
    OperatingSystem.cpp
    OperatingSystem.h
    ProblemSolving20162ModelBuilder.cpp
    ProblemSolving20162ModelBuilder.h
    ProblemTester.cpp
    ProblemTester.h
    Queue.cpp
    Queue.h
    Scheduling_Queue.cpp
    Scheduling_Queue.h
    Simul_Debug.cpp
    Simul_Debug.h
    Simul_Entity.cpp
    Simul_Entity.h
    Simul_Event.cpp
    Simul_Event.h
    Simul_Statistics.cpp
    Simul_Statistics.h
    Simul_Util.cpp
    Simul_Util.h
    Simulator.cpp
    Simulator.h
    SourceModule.cpp
    SourceModule.h
    Traits.h
    Util_Queue.cpp
    Util_Queue.h
    Util_Scheduling_Queue.cpp
    Util_Scheduling_Queue.h)

add_executable(20162_INE5412_SC_Theme1_StartPoint_master ${SOURCE_FILES})